# codex-agent-loop-orchestrator

./: .gitignore  README.md  fake_train.py  pyproject.toml  target_app.py
.codex/agent-loop/product_polish_next/: contract.json
docs/: ARCHITECTURE.md  PRD.md  product-review-scorecard.md  vue-frontend-refactor-prd.md  web-ui-feasibility.md
examples/: async_loop_contract.json  loop_contract.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/scripts/: copy-build.mjs
frontend/src/: App.vue  i18n.ts  styles.css
frontend/src/api/: caloClient.ts  types.ts
frontend/src/composables/: useDashboard.ts
frontend/src/lib/: artifacts.ts  commandWizard.ts  events.ts  format.ts  loopState.ts  markdown.ts
frontend/src/test/: ActionControls.spec.ts  App.spec.ts  ArtifactBrowser.spec.ts  CodexSessions.spec.ts  CommandWizard.spec.ts  DetailPanel.spec.ts  GoalForm.spec.ts  GuidancePanel.spec.ts  LoopList.spec.ts  RepoPicker.spec.ts  StatusDisclosures.spec.ts  TaskAdapterSetup.spec.ts  TimelinePanel.spec.ts  artifacts.spec.ts  caloClient.spec.ts  commandWizardLib.spec.ts  format.spec.ts  loopState.spec.ts  markdown.spec.ts  useDashboard.spec.ts
scripts/: acceptance_demo.sh  async_acceptance_demo.sh  goal_acceptance_demo.sh  web_acceptance_demo.sh
src/calo/: __init__.py  api.py  artifacts.py  cli.py  codex_runner.py  controller.py  dashboard.py  git_adapter.py  goal.py  models.py  policy.py  security.py  store.py  task_runner.py
tests/: test_api.py  test_loop_controller.py  test_web_browser.py
(+19 files in other folders)
