[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-agent-loop-orchestrator"
version = "0.1.0"
description = "A local orchestrator for low-noise Codex planner/worker/judge loops."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "uvicorn>=0.30",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
  "playwright>=1.45",
]

[project.scripts]
calo = "calo.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
calo = ["ui/*.html", "ui/*.css", "ui/*.js", "ui/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
